fixes singup page overflow issue (#1269)
* fixes singup page overflow issue

* fixed singup page overflow issue

* fix: alignment issue

---------

--- a/src/pages/Signup/index.css
+++ b/src/pages/Signup/index.css
@@ -11,10 +11,7 @@
 }
 
 .signup-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  margin-top: 4em;
 }
 
 .img-outer .img-inner {
@@ -114,7 +111,7 @@
 
 @media screen and (max-width: 720px) {
   .signup-container {
-    margin-top: 4em;
+    margin-top: 0;
   }
   .pass-container-both {
     flex-direction: column;
